app/globals.css
:root {
  --color1: hsl(101, 64%, 91%);
  --color2: rgb(197, 235, 231);
  --color3: hsl(204, 19%, 72%);
}

body {
  display: flex;
  flex-direction: column;
  /* min-height: 100vh; */
  height: 100%;
  margin: 0;
  width: 100vw !important;
  overflow-x: hidden !important;
}

.content-container {
  flex: 1 0 auto;
  width: 100%;
  overflow-x: hidden;
  margin: 0px;
}

.welcome {
  position: relative;
  height: 80vh;
}

row {
  padding-bottom: 0px !important
}

.resource-card {
  width: 18rem;
  height: 30rem;
  align-items: center;
  border: none;
  justify-content: center;
  display: flex;
  border-radius: 0.256rem;
  font-family: Open Sans, Arial, sans-serif;
  background-color: #eeeeee;
  padding: 0px;
  flex-direction: column;
}

.card-header {
  background-color: #eeeeee;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: large;
  font-weight: bold;
  border: none;
  padding: 0px;
  font-family: Open Sans, Arial, sans-serif;
}

.new2 {
  border: 1px solid black;
  width: 100%;
  padding: 0;
}

.part {
  color: #0b2945;
  letter-spacing: 2px;
  font-family: "Urbanist", sans-serif;
  margin: 10px 0px 3px 0px;
}

.row {
  padding: 0;
}

.properties-text {
  font-family: Open Sans, Arial, sans-serif;
  color: #0b2945;
  letter-spacing: 2px;
}

.page-container {
  margin: 90px;
  display: flex;
  align-items: center;
  flex-direction: column;
}

@media screen and (max-width: 1100px) {
  .about {
    font-size: 15px !important;
    margin: 10px;
  }

}

@media screen and (max-width: 900px) {

  .welcome {
    height: 50vh !important;
  }

  .bio-img {
    height: 170px;
    width: auto;
    border-radius: 2%;
  }

  .leadership-text {
    display: none;
  }

  .footer {
    height: auto !important;
  }

  .foot {
    margin-top: 8px;
  }

  .about.label-2.more-link {
    font-size: 12px !important;
  }

  .leadership-div {
    margin-top: 15px !important;
  }

  .home-contact-div {
    margin: 90px 20px 0px 20px !important;
    padding: 0px;
  }

  .page-container {
    margin: 50px !important;
  }

  .navbar {
    padding: none !important;
  }

  .contact-page {
    margin: 180px 30px 0px;
    flex-direction: column !important;
    align-items: center;
  }

  .map-container {
    display: none;
  }

  .home-portfolio {
    flex-direction: column;
  }

  .large-col {
    width: 100% !important;
  }

  .partner {
    width: 100% !important;
  }

  .home-body {
    padding-bottom: 0 !important;
  }

  .small-col {
    width: 100% !important;
  }

  .row {
    flex-direction: column;
    align-items: center;
  }

  .disappear {
    display: none;
  }

  .about {
    margin: 0px !important;
  }

}

@media screen and (max-width: 500px) {
  .part {
    font-size: medium !important;
  }

  .principal {
    font-size: small;
  }

  .h1 {
    font-size: 18px;
    text-decoration: underline;
  }

  .h2 {
    font-size: 13px;
    ;
  }

  .h3 {
    font-size: 14px;
    text-decoration: underline;
  }
}

/* .carousel-image {
  height: 400px;
  object-fit: cover;
  border-radius: 1.2%;
} */

.resource-name-description {
  display: flex;
  justify-content: center;
}

.resource-name-description {
  margin-top: 20px;
  margin-bottom: 20px;
}

.card-body {
  padding: 0px;
  margin: 0px;
  display: flex;
  flex-direction: column;
  align-items: center;
  font-family: Open Sans, Arial, sans-serif;
  letter-spacing: 2px;
  color: #0b2945;
}

.card-img {
  padding: 0px;
  height: 15rem;
  width: 15rem;
  object-fit: cover;
  border-radius: 3%;
}

.learn-more-div {
  display: flex;
  justify-content: flex-end;
  width: 100%;
}


.overlay {
  display: flex;
  top: 0;
  left: 0;
  width: 50%;
  height: 20%;
  background-color: rgba(0, 0, 0, 0.4);
  justify-content: center;
  align-items: center;
  flex-direction: column;
  z-index: 0;
  border-radius: 3%;
}

.row {
  display: flex;
  flex-direction: row;
  width: 100%;
}

.small-col {
  width: 25%;
  height: 100% !important;
  display: flex;
  justify-content: center;
  margin-top: 40px;

}

.large-col {
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  padding: 0px;
}

/* .berrin {
  border-right: 1px solid var(--color2);
} */

.partner {
  width: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  margin-top: 10px;
}

.home-body {
  top: 0;
  /* padding-bottom: 20px; */
  margin: 0;
  width: 100vw !important;
  height: 100%;
  overflow-x: hidden;
}

.home-logo {
  height: auto;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: auto;
  z-index: 3;
  object-fit: contain;
}

.about-div {
  width: 100% !important;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin-top: 30px;
}

.home-portfolio {
  width: 100% !important;
  display: flex;
  height: 100%;
  align-items: center;
  /* margin: 20px; */
}

.hm-prt-pic {
  margin: 20px
}

.about {
  font-family: "Urbanist", sans-serif;
  line-height: 200%;
  letter-spacing: 1.3px;
  line-height: 2;
  font-size: 20px;
  margin: 20px;
  text-align: justify;
  display: flex;
  align-items: center;
}

.more-link {
  text-decoration: none;
  font-size: 15px;
  letter-spacing: 1.5px;
  color: var(--color3);
  margin: 30px 0px 30px 0px;
  font-family: "Urbanist", sans-serif;
}

.more-link:hover {
  color: var(--color2);
}

.label-2 {
  color: var(--color3);
  font-family: "Urbanist", sans-serif;
  font-size: 15px;
}

.home-contact-div {
  display: flex;
  width: 100%;
  align-items: center;
  justify-content: center;
  margin-top: 80px;
  flex-direction: column;
}

.contact-form-2 {
  display: flex;
  flex-direction: column;
  align-items: center;
}

#contact_form {
  display: flex;
  align-items: center;
  flex-direction: column;
}


.leadership-div {
  width: 100% !important;
  display: flex;
  align-items: center;
  justify-content: center;
  font-family: "Urbanist", sans-serif;
  flex-direction: column;
  margin-top: 90px;
}

.leadership-text {
  text-align: center;
}

.submit-btn {
  width: 100%;
  min-height: 40px;
  font-size: large;
  margin-top: 20px;
  border: none;
  border-radius: 3px;
  border: 1px solid var(--color3);
  background-color: var(--color1);
  padding: 5px;
  letter-spacing: 2px;
  font-family: "Urbanist", sans-serif;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
}

.submit-btn:hover {
  width: 100%;
  background-color: var(--color2);
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.form-control {
  border: 1px solid var(--color3);
  border-radius: 2px;
  min-height: 23px;
  box-shadow: 2px 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
}

#message {
  height: 100px;
}

.hm-prt-pic {
  filter: brightness(85%);
  border-radius: 2px;
}

.lighten {
  filter: brightness(119%);
  border-radius: 2px;
}

.principal {
  font-size: 18px;
  color: var(--color3);
  margin-bottom: 20px;
}

.footer {
  background-color: white;
  width: 100vw !important;
  box-sizing: border-box;
  overflow-x: hidden;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: 60px 0px 0px 0px;
}

.legal {
  margin-bottom: 35px !important;
  letter-spacing: 1px !important;
}

.footer-logo {
  width: auto;
}

.foot-address {
  display: flex;
}

.foot-details {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.footer-icon {
  font-size: 12px;
  margin: 10px 5px 0px 5px;
}

.foot-logo {
  display: flex;
  justify-content: center;
}

.foot {
  display: flex;
  justify-content: center;
  color: black;
  text-decoration: none;
  margin: 0px;
}

.foot-info {
  font-family: "Urbanist", sans-serif;
  margin: 8px;
  font-size: 12px;
  letter-spacing: 2px;
  text-decoration: none !important;
  text-align: center;
  display: flex;
}

.services-title {
  font-size: 30px;
  font-family: "Urbanist", sans-serif;
  font-weight: bolder;
  margin: 30px 0px;
  letter-spacing: 2.5px;
}

@media screen and (max-width: 700px) {

  .services-title {
    margin: 8px 0px;
    font-size: large !important;
  }

  .hear-from {
    font-size: large !important;
  }
}

.hear-from {
  font-family: "Urbanist", sans-serif;
  font-size: 25px;
  letter-spacing: 1.5px;
}

.custom-row {
  display: flex;
  justify-content: space-between;
  margin-bottom: 20px;
  width: 100%;
}

.custom-col {
  flex: 1;
  margin: 0px 5px
}

.custom-input,
.custom-textarea {
  width: 100%;
  padding: 8px 10px;
  box-sizing: border-box;
  border: 1px solid #ccc;
  border-radius: 4px;
  font-size: 1em;
}

.more-bio-div {
  display: flex;
  width: 100%;
  justify-content: flex-end;
}

@media screen and (max-width: 400px) {
  .part {
    font-size: small !important;
  }

}

